Tooltip and Modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,9 @@
     background-color: #512DA8;
 }
 
-.card-header{
-    background-color: rgb(247, 229, 74);
+.tab-content{
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
 }
